--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -7,7 +7,7 @@
 
 var disqus_config = function () {
 this.page.url = "{{ .Permalink }}";  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = "{{ .UniqueID }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.identifier = "{{ .File.UniqueID }}"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
